--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/ajayh2/LIRI-hw/issues"
   },
-  "homepage": "https://github.com/ajayh2/LIRI-hw#readme"
+  "homepage": "https://github.com/ajayh2/LIRI-hw#readme",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
+    "moment": "^2.24.0",
+    "node-spotify-api": "^1.1.1"
+  }
 }
